# Pythondemo

./: pyproject.toml  requirementsALL.txt
.github/workflows/: python-app.yml
