[tool.poetry]
name = "Pythondemo"
version = "0.1.0"
description = "A short description of the project"
authors = ["Ishika Saxena <ishika00818@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
